# markp300

./: CMakeLists.txt  QtWidgetsApplication1.cpp  QtWidgetsApplication1.h  QtWidgetsApplication1.qrc  QtWidgetsApplication1.ui  README.md  SettingsWindow.cpp  SettingsWindow.h  flashwidget.cpp  flashwidget.h  flashwidget.ui  main.cpp  parallelportcontroller.cpp  parallelportcontroller.h
res/: res.qrc
